fix the arrangement of warehouse details on mobile mode

--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -66,7 +66,6 @@
     &--row {
       display: flex;
       flex-wrap: wrap;
-      border-bottom: 1px solid $cloud;
 
       &:hover {
         background-color: rgba(189, 197, 213, 0.5);
@@ -117,10 +116,10 @@
       display: flex;
       align-items: center;
       text-decoration: none;
-      @include dynamicFont(600, 0.8125rem, 1.25rem, $instock-indigo);
+      @include dynamicFont(600, 0.6875rem, 1rem, $instock-indigo);
 
       @include tablet {
-        @include dynamicFont(600, 0.875rem, 1.375rem, $instock-indigo);
+        @include dynamicFont(600, 0.75rem, 1.125rem, $instock-indigo);
       }
     }
 
